css/main.css
body {
	margin: 0px;
	padding: 0px;
	font-family: "Open Sans", sans-serif;
	font-size: 0.9em;
	background-color: rgb(248,248,248);
}

/* nav bar styles */
#navbar {
    min-height: 48px;
    background-color: rgb(64,142,90);
    padding: 0 40px; /* same as page content */
    display: flex;
    align-items: center;
    justify-content: space-between;
    flex-wrap: wrap;
}
#navbar a {
    color: white;
}
#navTitle {
	margin-right: 1em;
}
#navTitle a {
    font-weight: 700;
    font-size: 1.6em;
    text-decoration: none;
}
#navLinks {
    margin-top: 0.3em;
    margin-right: 0px;
    margin-bottom: 0.3em;
    margin-left: -.4em; /* offset padding */
    text-align: center;
}
#navLinks a {
    margin-right: 1.2em;
    font-size: 1.2em;
    font-weight: 600;
	text-decoration: none;
	padding: .1em .4em;
}
#navLinks a:last-child {
	margin-right: 0;
}
#navLinks a:hover {
	background-color: rgb(119,156,200);
}
#navLinks a.active {
	text-decoration: underline;
}

/* margin for all pages */
.content {
	margin-top: 20px;
	margin-left: 40px;
	margin-right: 40px;
	margin-bottom: 50px; /* space for footer plus extra whitespace */
}

#leftPanel {
	width: 300px;
	position: fixed;
	overflow-x: hidden;
	overflow-y: auto;
	height: calc(100% - 88px); /* Minus the navBar and the footer. */
	background-color: rgb(248,248,248);
}

footer {
    width: 100%;
    position: fixed;
    bottom: 0;
    left: 0;
    right: 0;
    height: 40px;
    background-color: rgb(64,142,90);
    color: white;
    display: flex;
    align-items: center;
    justify-content: flex-end;
}

.localeSelector {
    margin: 0 1em;
    padding: .2em;
    border-style: none;
    border-radius: 4px;
    background-color: #e0efff;
    color: black;
}

audio {
	width: 100%;
	position: fixed;
	left: 0; /* Spans the entire page. */
	bottom: 40px; /* Directly above the footer bar. */
	display: block;
}

#hidden {
	display: none;
}
/*	MAIN.CSS
	->	Text Display
		General */
table.gloss {
	display: inline;
	padding-right: 9px;
}

.topRow {
	font-weight: 600;
}

td {
	padding-left: 4px;
	padding-right: 4px;
	white-space: nowrap;
}
/*	MAIN.CSS
	->	Text Display
		Timed */

#video {
    outline: none;
}

#centerPanel {
	position: fixed;
	overflow-y: auto;
	overflow-x: hidden;
}

.labeledTimeBlock {
	clear: both;
	float: left;
	display: grid;
	grid-template-columns: 1fr 7fr;
	padding-right: 10px;
	padding-top: 27px;
	padding-bottom: 27px;
	width: 100%;
}

.timeBlock {
	float: left;
	padding-left: 9px;
	overflow-x: auto;
}

/*	MAIN.CSS
	->	Text Display
		Untimed */
#untimedTextDisplay {
	position: fixed;
	width: calc(100% - 300px);
	height: calc(100% - 88px); /* Minus the navBar and the footer. */
	overflow-y: scroll;
	overflow-x: hidden;
}

.untimedBlock {
	clear: both;
	float: left;
	display: grid;
	grid-template-columns: 1fr 7fr;
	padding-right: 10px;
	padding-top: 27px;
	padding-bottom: 27px;
	width: 100%;
	overflow-x: auto;
}

.latexButton {
	visibility: hidden;
	margin-left: 3%
}

.timeBlock:hover .latexButton {
	display: block;
	visibility: visible;
}

.untimedBlock:hover .latexButton {
	display: block;
	visibility: visible;
} 

.latexButtonContainer {
	grid-column-start: 1;
	grid-column-end: 3;
}

.tierSelectionSection {
	background : rgb(212, 234, 247);
	padding-bottom: 5%;
	padding-left: 5%;
	padding-right: 5%;
	padding-top: 5%; 
}

.tiersHeaderSection, .tierSelectionRow {
	display: grid;
	grid-template-columns: 1fr 8fr;
	justify-self: center;
	padding: 5px;
}

.tiersHeader, .tierSelectionRowButtonSection {
	display: flex;
	flex-direction: row;
	margin: 5px;
	justify-content: space-evenly;
}

.tierHeaderName {
	margin: 5px;
	width: 100%;
}

.latexResultContainer {
	overflow-x: scroll;
}

#latexFormatterConfirmButton,   
#latexFormatterCloseButton {
	background-color: white;
	border-radius: 4px;
	transition-duration: 0.2s;
}

#latexFormatterConfirmButton:hover {
	background-color: #4CAF50;
	color: white;
}
  
#latexFormatterCloseButton {
	margin-bottom: 3%;
	margin-top: 3%;
}

#latexFormatterCloseButton:hover {
	background-color: #f44336;
	color: white;
}

span.timeStamp {
	padding-top: 3px;
	float: left;
	/*margin-right: 9px;*/
	margin-left: 9px;
	padding-right: 9px;
	text-align: center;
	min-width: 46px;
	padding-top: 8px;
	padding-bottom: 5px;
	color: black;
	font-weight: 700;
	text-decoration: none;
	cursor: pointer;
}

.searchSentence {
	background-color: white;
	margin: 10px;
	padding: 5px;
	border-width: 3px;
	border-style: solid;
	border-color: rgb(100, 100, 100);
	border-radius: 5px;
	overflow-x: auto;
}

.labeledSentence {
	white-space: nowrap;
	padding-top: 5px;
	padding-bottom: 5px;
}

.speakerLabel {
	float: left;
	margin-top: 3px;
	font-weight: 600;
}

.searchPageButton {
	margin-right: 1%;
}


table.gloss {
	padding-left: 5px;
}

/*	MAIN.CSS
	->	Settings */

ul {
	list-style: none;
	-webkit-padding-start: 0px;
	-webkit-margin-before: 0.2em;
	padding-inline-start: 0px;
	margin-block-start: 0.2em;
}

#settings ul {
	margin-left: 10px;
	list-style: none;
}

#title {
	padding-left: 20px;
	padding-right: 20px;
	font-weight: 700;
	font-size: 1.7em;
}

a:visited, a {
	color: black;
}

.content a:hover {
	font-weight: 600;
}

@font-face {
    font-family: 'Open Sans';
    font-weight: 400;
}
@font-face {
    font-family: 'Open Sans';
    font-weight: 600;
}
@font-face {
    font-family: 'Open Sans';
    font-weight: 700;
}

.hidden {
	display: none;
}

.minibarTabs {
	list-style: none;
	float: left;
	width: 100%;
	border-top: 2px solid rgb(151,151,151);
	border-bottom: 2px solid rgb(151,151,151);
	background: white;
/*	padding-left: 2%;
	padding-right: 2%;*/
}

.minibarTabs > li {
	float: left;
	width: 33.3333%;
	text-align: center;
}

.minibarTabs > li > a {
	height: 30px;
	display: block;
	padding: 5px 0px;
}

.minibarTabs > li:hover {
	background-color: lightsteelblue;
}

.minibarTabs > li.active {
	background-color: steelblue;
}

.minibarTabs > li > a > img {
	height: 30px;
}

.miniPage.hide {
    display: none;
}

.miniPage.active {
    display: block;
}

#miniPage {
	margin: 20px 20px;
}

#speakerList ul {
	margin-left: 17px;
	list-style: square;
}

video {
	display: none;
}

#indexTable {
	text-align: center;
}

.loader {
	display: flex;
	justify-content: center;
	align-items: center;
	height: 10em;
}
a.tooltip {
	position: relative;
	text-decoration: none;
	color: blue;
}

a.tooltip span {
	display: none;
	padding: 14px 20px;
	top: 53px;
	right: 5px;
	width: 240px;
	line-height: 25px;
	position: fixed; 
	/*position: absolute; */
	text-wrap: wrap;
}

a.tooltip:hover span {
	display: block;
	color: black;
	background-color: #ffffff;
	font-size: 20px;
	border: 1px solid black;
	-moz-border-radius: 10px;
	-webkit-border-radius: 10px;
	border-radius: 10px; 
}

/*
table, th, td{
    border: 1px solid black;
}*/



/* Sentence Flexbox Container Styles */

.sentenceContainer{
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
}

.topRowItem {
	font-weight: 600;
	width: 100%;
	margin-top: 3px;
	margin-bottom: 5px;
	padding-left: 9px
}

.indepItem{
	width: 100%;
	margin-top: 3px;
	margin-bottom: 5px;
	padding-left: 9px;
}

.depItem{
	display: grid;
	width: fit-content;
	padding-left: 8px;
	margin-top: 3px;
	margin-bottom: 5px;
}

.depItem tr {
	border-width: 0;
}

.depItem td {
	padding: 0px 0px 2px;
}

